fix: Update favicon.svg and correct image source path in Hero.astro

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -20,7 +20,7 @@ import Contact from "@/components/sections/Contact.astro";
     </div>
     <figure>
       <img
-        src="/public/me.webp"
+        src="public/me.webp"
         alt="Alejandro Tamayo Castro"
         class="rounded-lg shadow-lg w-32 aspect-[1/1] object-fit"
       />
