--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css"
+import "../styles/global.css";
 ---
 
 <!doctype html>
@@ -9,12 +9,13 @@ import "../styles/global.css"
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <!-- fira mono font -->
-	<link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-	href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap"
-	rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap"
+      rel="stylesheet"
     />
+
     <title>Portafolio de Alejandro Tamayo</title>
   </head>
   <body>
