fix: Adjust spacing and typography in various sections for improved layout consistency

--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -9,7 +9,7 @@ import DevExtreme from "@/icons/DevExtreme.astro";
 ---
 
 <Section title="Habilidades">
-  <div class="flex flex-row items-center gap-4 mb-4">
+  <div class="grid grid-cols-2 md:flex md:flex-row md:items-center gap-4 mb-4">
     <div class="rounded-lg bg-gray-100 p-2 flex flex-row items-center gap-2">
       <HTML class="inline-block mr-2" />
       <span class="text-gray-700">HTML</span>
