--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -2,7 +2,7 @@
 const { title } = Astro.props;
 ---
 
-<section class="max-w-3xl mt-0 mr-auto md:mb-9 mb-12 ml-auto">
-  {title && <h2 class="mb-8 font-bold text-2xl">{title}</h2>}
+<section class="max-w-3xl mt-0 mr-auto mb-9 ml-auto">
+  {title && <h2 class="mb-4 font-bold text-2xl">{title}</h2>}
   <slot />
 </section>
