--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -3,7 +3,7 @@ import Section from "../Section.astro";
 ---
 
 <Section title="Sobre Mi" >
-  <p class="prose-p">
+  <p class="prose-p prose-sm md:prose-default">
     Soy egresado de Ingeniería en Sistemas Computacionales por el Instituto
   Politécnico Nacional, autodidacta, responsable y con una fuerte pasión por el
   aprendizaje continuo. Fui desarrollador web en Lasec Technology Systems, donde
