--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -29,7 +29,7 @@ export const prerender = true;
           <h3 class="text-xl font-semibold mb-2 text-gray-800">
             {item.data.degree}
           </h3>
-          <div class="flex flex-row justify-between mb-2 text-sm font-bold text-gray-600">
+          <div class="flex flex-row justify-between mb-2 text-xs md:text-sm font-bold text-gray-600">
             <a
               href={item.data.school.site}
               class="block mb-2 hover:transition-all hover:text-gray-900 hover:underline"
