--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -5,10 +5,10 @@ import Contact from "@/components/sections/Contact.astro";
 ---
 
 <Section>
-  <article class="flex flex-col md:flex-row items-center justify-between gap-4">
+  <article class="flex flex-col md:flex-row md:items-center md:justify-between md:gap-4">
     <div>
-      <h1 class="text-4xl font-bold mb-4">Alejandro Tamayo Castro</h1>
-      <h2 class="text-xl mb-1">FrontEnd Developer</h2>
+      <h1 class="prose-h1 prose-2xl md:text-4xl font-bold md:mb-4">Alejandro Tamayo Castro</h1>
+      <h2 class="prose-h2 prose-xl md:text-xl mb-1">FrontEnd Developer</h2>
       <span class="flex flex-row items-center text-gray-500 gap-2 mb-2">
         <World class="inline-block mr-2" />
         Zacatecas, México
@@ -18,7 +18,7 @@ import Contact from "@/components/sections/Contact.astro";
       </div>
       </div>
     </div>
-    <figure>
+    <figure class="hidden md:block">
       <img
         src="/me.webp"
         alt="Alejandro Tamayo Castro"
