--- a/src/components/sections/Languages.astro
+++ b/src/components/sections/Languages.astro
@@ -3,7 +3,7 @@ import Section from "../Section.astro";
 ---
 
 <Section title="Idiomas">
-  <span class="flex flex-row items-baseline gap-4">
+  <span class="grid grid-col-2 md:flex md:flex-row md:items-baseline gap-4">
     <div class="rounded-lg bg-gray-100 p-2">
       <div class="flex flex-row items-center gap-2">
         <span class="text-gray-700">Español</span>
