--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -89,6 +89,12 @@ import "../styles/global.css";
     display: none !important;
   }
 
+  @media (width <= 700px) {
+    html {
+      letter-spacing: normal;
+    }
+  }
+
   @media print {
     .no-print {
       display: none !important;
