--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Education from "@/components/sections/Education.astro";
 import Hero from "@/components/sections/Hero.astro";
 import Skills from "@/components/sections/Skills.astro";
 import Languages from "@/components/sections/Languages.astro";
+import Courses from "@/components/sections/Courses.astro";
 ---
 
 <Layout>
@@ -17,6 +18,7 @@ import Languages from "@/components/sections/Languages.astro";
     <Education />
     <Projects />
     <Skills />
+    <Courses />
     <Languages />
   </main>
 </Layout>
