--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -5,7 +5,7 @@ import GitHub from "@/icons/GitHub.astro";
 import Telephone from "@/icons/Phone.astro";
 ---
 
-<span class="inline-flex gap-4 mb-4 align-baseline">
+<span class="inline-flex gap-4 align-baseline">
   <div class="rounded-lg bg-gray-200 p-2 flex flex-row items-center gap-2">
     <a
       href="mailto:atamayo4320@gmail.com"
