--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -1,58 +1,45 @@
 ---
-import { getCollection, render } from "astro:content";
+import data from "@/content/education_data.json";
 import Section from "@/components/Section.astro";
+import School from "@/icons/School.astro";
 
-const education = await getCollection("education");
+const education = data;
 
-const renderedExperiences = await Promise.all(
-  education.map(async (item) => {
-    const { Content } = await render(item);
-    return {
-      ...item,
-      Content,
-    };
-  })
-);
-
-const sortedEducation = renderedExperiences.sort(
-  (a, b) => b.data.from - a.data.from
-);
+const sortedEducation = education.sort((a, b) => b.from - a.from);
 
 export const prerender = true;
 ---
 
 <Section title="Educación">
-  <div class="flex flex-col gap-8">
+  <div class="flex flex-col gap-6 ml-3">
     {
       sortedEducation.map((item) => (
         <article>
-          <h3 class="text-xl font-semibold mb-2 text-gray-800">
-            {item.data.degree}
-          </h3>
-          <div class="flex flex-row justify-between mb-2 text-xs md:text-sm font-bold text-gray-600">
+          <div class="flex flex-row gap-2 items-center mb-2">
+            <School class="text-gray-800"/>
+            <h3 class="font-semibold text-gray-800 text-lg">{item.degree}</h3>
+          </div>
+          <div class="flex flex-row justify-between mb-2 text-xs md:text-sm font-bold text-gray-500">
             <a
-              href={item.data.school.site}
+              href={item.school.site}
               class="block mb-2 hover:transition-all hover:text-gray-900 hover:underline"
               target="_blank"
               rel="noopener noreferrer"
-              title={item.data.school.name}
+              title={item.school.name}
             >
-              {item.data.school.abreviation}
+              {item.school.abreviation}
             </a>
-            <span class="block">
-              {new Date(item.data.from)
+            <span class="text-gray-600">
+              {new Date(item.from)
                 .toLocaleString("es-ES", { month: "short", year: "numeric" })
                 .replace(" de ", " ")
                 .replace(/^\w/, (c) => c.toUpperCase())}
               {" - "}
-              {new Date(item.data?.to ? item.data.to : "presente")
+              {new Date(item?.to ? item.to : "presente")
                 .toLocaleString("es-ES", { month: "short", year: "numeric" })
                 .replace(" de ", " ")
                 .replace(/^\w/, (c) => c.toUpperCase())}
             </span>
-          </div>
-          <div class="prose-p prose-sm text-gray-600">
-            <item.Content />
           </div>
         </article>
       ))
